<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_corner_radius_8dp"
    app:cardElevation="@dimen/card_elevation_1dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="@dimen/margin_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_16dp">

        <TextView
            android:id="@+id/location_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_3dp"
            android:padding="@dimen/padding_16dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/train_movement_image"
            android:layout_width="@dimen/width_50dp"
            android:layout_height="@dimen/width_50dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:contentDescription="@string/train_movement_image_content_description"
            android:src="@drawable/ic_train_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_code" />

        <TextView
            android:id="@+id/departure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:text="@string/label_departure"
            app:layout_constraintStart_toEndOf="@+id/train_movement_image"
            app:layout_constraintTop_toTopOf="@+id/train_movement_image" />

        <TextView
            android:id="@+id/destination_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:text="@string/label_destination"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="@+id/departure_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/departure_label" />


        <TextView
            android:id="@+id/departure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:padding="@dimen/padding_4dp"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintEnd_toStartOf="@+id/destination"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/train_movement_image"
            app:layout_constraintTop_toBottomOf="@+id/departure_label" />


        <TextView
            android:id="@+id/destination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_18dp"
            android:gravity="end"
            android:padding="@dimen/padding_4dp"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/departure"
            app:layout_constraintTop_toTopOf="@+id/destination_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>