<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    app:cardCornerRadius="@dimen/card_corner_radius_8dp"
    app:cardElevation="@dimen/card_elevation_1dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_16dp">

        <TextView
            android:id="@+id/service_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_train_black_24dp"
            android:drawablePadding="@dimen/padding_8dp"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_4dp" />

        <TextView
            android:id="@+id/train_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/padding_4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/origin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_started"
            android:layout_marginStart="@dimen/margin_6dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/label_origin"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/destination_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/train_type"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_6dp"
            android:text="@string/label_destination"
            android:textSize="@dimen/text_size_14sp" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/origin_label"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/text_size_16sp" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/text_size_16sp" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/container"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/last_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_24dp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_location"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:padding="@dimen/padding_8dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/station_data_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/last_location"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_8dp"
            android:drawableEnd="@drawable/ic_info_outline_black_24dp"
            android:drawablePadding="@dimen/padding_8dp"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_8dp"
            android:text="@string/label_stop_information" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>